# DroneID

./: README.md  SDSmemorymap.xlsx  burst_extractor.py  channel.py  check_fft_backend.py  correlator.py  demod.py  fine_timing.py  iq_to_image.py  marker_freqs.json  mm_streaming.sh  ofdm.py  parse_frame.py  process_file.py  process_live.py  qdma_st.sh  rc.local  read_droneid.py  requirements.txt  scrambler.py  timing.py  utils.py  zc_sequence.py
cpp/deepwave/: CMakeLists.txt  Makefile  remove_turbo  remove_turbo.cpp
cpp/versal/: help.txt  remove_turbo
doc/: DJ_제어_탐지모듈_ICD_설계문서_20260206.xlsx  DJ_제어_탐지모듈_데이터전송.xlsx  SDS_Blockdiagram.pptx
sh/: write_count.sh
